--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^5.23.4",
     "clsx": "^2.1.1",
     "cookies-next": "^5.1.0",
+    "date-fns": "^4.1.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
